--- a/parts/client/stack.jade
+++ b/parts/client/stack.jade
@@ -23,7 +23,7 @@ template(name='stack')
                     i.question.icon
                     |questions
                 .ui.dropdown
-                    span.text #{sv 'limit'}
+                    span.text {{sv 'limit'}}
                     i.dropdown.icon
                     .menu 
                     +skve k='limit' v=1 l='1'
