--- a/parts/client/site.jade
+++ b/parts/client/site.jade
@@ -4,16 +4,13 @@ template(name='site_page')
             .row
                 .four.wide.column
                     img(src=logo_url)
-                .eight.wide.column
-                    .ui.header !{name}
-            .row
-                .four.wide.column
                     // img(src=icon_url)
                     // .ui.segment(style="background-color:#{styling.tag_background_color}")
                     // .ui.label #{tag_background_color}: tag_background_color
                     // .ui.label #{tag_foreground_color}: tag_foreground_color
                     // .ui.label #{link_color}: link_color
                     // .ui.header related sites
+                    .ui.header !{name}
                     each related_sites
                         .ui.small.header 
                             i.fork.icon
@@ -38,7 +35,14 @@ template(name='site_page')
                         .item #{site_type} site_type
                     +comments
                     +voting_full
-                .eight.wide.column
+                .eight.wide.column.scrolling
+                    if selected_tags
+                        // if many_tags
+                        //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
+                        //         i.remove.icon
+                        each selected_tags
+                            +unselect_tag
+                
                     .ui.icon.input
                         i.search.icon
                         input.search_site(type='text')
