--- a/parts/client/site.jade
+++ b/parts/client/site.jade
@@ -35,7 +35,7 @@ template(name='site_page')
                         .item #{site_type} site_type
                     +comments
                     +voting_full
-                .eight.wide.column.scrolling
+                .eight.wide.column
                     if selected_tags
                         // if many_tags
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
