--- a/parts/client/stack_page.jade
+++ b/parts/client/stack_page.jade
@@ -3,7 +3,7 @@ template(name='stack_page')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    a.ui.header(href="/site/#{site}") 
+                    a.ui.large.fluid.button(href="/site/#{site}") 
                         | #{site}
                 .eight.wide.column
                     .ui.header !{title}
