--- a/parts/client/stack_page.jade
+++ b/parts/client/stack_page.jade
@@ -4,6 +4,7 @@ template(name='stack_page')
             .row
                 .four.wide.column
                     a.ui.large.fluid.button(href="/site/#{site}") 
+                        i.chevron.left.icon
                         | #{site}
                 .eight.wide.column
                     .ui.header !{title}
