add comments back, smaller reddit search, link doc results to selected_tags

--- a/parts/client/blocks.jade
+++ b/parts/client/blocks.jade
@@ -134,7 +134,7 @@ template(name='comments')
     // .ui.bottom.attached.tab.segment.bottom_rounded.active(data-tab='first')
     .ui.fluid.icon.large.input
         i.plus.icon
-        input.add_comment(model='text' placeholder='comment (-1p)...')
+        input.add_comment(model='text' )
     if currentUser
         .ui.comments
             each doc_comments
