--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -362,7 +362,7 @@ template(name='tag_selector')
     a.ui.zoomer.tertiary.large.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.zoomer(src=term.watson.metadata.image)    
+                img.ui.mini.rounded.inline.invert.image.zoomer(src=term.watson.metadata.image)    
         | #{name}
         // small #{count}
         
