working site search input, adds to selected_tags, talks

--- a/parts/client/site.jade
+++ b/parts/client/site.jade
@@ -51,10 +51,10 @@ template(name='site_page')
                         +tag_selector
                         // .ui.large.label(title=count) #{name}
                     if skv_is 'sort_direction' 1
-                        .ui.icon.button.sort_down
+                        .ui.icon.compact.circular.button.sort_down
                             i.caret.down.icon
                     else
-                        .ui.icon.button.sort_up
+                        .ui.icon.compact.circular.button.sort_up
                             i.caret.up.icon
                     .ui.compact.circular.button.limit_1
                         |1
